// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nil > renders nil parser 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const nilParserDataParser = DP.nil({ coerce: true });"
`;

exports[`nil > renders nil parser without coerce 1`] = `
"import * as DP from "@duplojs/utils/dataParser";

export const nilParserNoCoerceDataParser = DP.nil();"
`;
